Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/fields/Product_sold_by_dealer__c.field-meta.xml
<CustomField>
    <fullName>Product_sold_by_dealer__c</fullName>
    <label>Product sold by dealer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Column Pipe</fullName>
            </value>
            <value>
                <fullName>Casing</fullName>
            </value>
            <value>
                <fullName>HDPE Pipes</fullName>
            </value>
            <value>
                <fullName>GI Pipe</fullName>
            </value>
            <value>
                <fullName>Agri Pipes</fullName>
            </value>
            <value>
                <fullName>Pumps</fullName>
            </value>
            <value>
                <fullName>Water tank</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
                <isActive>false</isActive>
                <label>Cables</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>