Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/fields/Supreme_Fast_moving_Ltr__c.field-meta.xml
<CustomField>
    <fullName>Supreme_Fast_moving_Ltr__c</fullName>
    <label>Supreme Fast moving Ltr</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
            <value>
                <fullName>750</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>7500</fullName>
            </value>
            <value>
                <fullName>10000</fullName>
            </value>
            <value>
                <fullName>15000</fullName>
            </value>
            <value>
                <fullName>20000</fullName>
            </value>
            <value>
                <fullName>25000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>