Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/fields/Total_shop_turnover_of_all_the_items_in__c.field-meta.xml
<CustomField>
    <fullName>Total_shop_turnover_of_all_the_items_in__c</fullName>
    <label>Total shop turnover of all the items in</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>