Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/fields/Type_of_Influencers_of_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Influencers_of_Dealer__c</fullName>
    <label>Type of Influencers of Dealer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farmer</fullName>
            </value>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Sarpanch</fullName>
            </value>
            <value>
                <fullName>Borewell Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>