Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/recordTypes/Agri_pipes.recordType-meta.xml
<RecordType>
    <fullName>Agri_pipes</fullName>
    <active>true</active>
    <label>Agri pipes</label>
</RecordType>