Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/recordTypes/Cables.recordType-meta.xml
<RecordType>
    <fullName>Cables</fullName>
    <active>true</active>
    <label>Cables</label>
</RecordType>