Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/recordTypes/Casting.recordType-meta.xml
<RecordType>
    <fullName>Casting</fullName>
    <active>true</active>
    <label>Casting</label>
</RecordType>