Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/recordTypes/Column_Pipe.recordType-meta.xml
<RecordType>
    <fullName>Column_Pipe</fullName>
    <active>true</active>
    <label>Column Pipe</label>
</RecordType>