Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/recordTypes/GI_Pipe.recordType-meta.xml
<RecordType>
    <fullName>GI_Pipe</fullName>
    <active>true</active>
    <label>GI Pipe</label>
</RecordType>