Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/recordTypes/HDPE_pipes.recordType-meta.xml
<RecordType>
    <fullName>HDPE_pipes</fullName>
    <active>true</active>
    <label>HDPE pipes</label>
</RecordType>