Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/recordTypes/Pumps.recordType-meta.xml
<RecordType>
    <fullName>Pumps</fullName>
    <active>true</active>
    <label>Pumps</label>
</RecordType>