Partial_14Dec2021/force-app/main/default/objects/Column_dealer_Survey__c/recordTypes/Water_tank.recordType-meta.xml
<RecordType>
    <fullName>Water_tank</fullName>
    <active>true</active>
    <label>Water tank</label>
</RecordType>